DLR-AllGroups, fix spacing on discover groups page

--- a/src/app/community/groups-feature/groups-feature.page.scss
+++ b/src/app/community/groups-feature/groups-feature.page.scss
@@ -206,6 +206,7 @@ hr {
 .groups-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    grid-gap: 0.75rem;
+    gap: 0.75rem;
     padding: 0.25rem;
 }
